2. tab with css animation

--- a/css/variable.css
+++ b/css/variable.css
@@ -2,4 +2,6 @@
   /* accordion */
   --accordion-border: 1px solid #aaa;
   --accordion-padding: 10px;
+  --tab-black: #343436;
+  --tab-border-radius: 28px;
 }
