--- a/css/components/tab.css
+++ b/css/components/tab.css
@@ -104,3 +104,244 @@
   background-color: #005bff;
   cursor: pointer;
 }
+
+/* tab 3 */
+.tab-three__background {
+  background-color: #f4f6fa;
+  width: 100%;
+}
+
+.tab-three {
+  width: 750px;
+  padding: 0 10px;
+  margin: 50px auto;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 5px 10px #999;
+}
+
+.tab-three__title {
+  font-size: 24px;
+  text-align: center;
+  color: #424670;
+  padding: 30px 0 20px;
+}
+
+.tab-three__links ul {
+  display: flex;
+  align-items: center;
+  height: 160px;
+}
+
+.tab-three__links ul li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 150px;
+  height: 150px;
+  transition: 0.3s;
+}
+
+.place-name {
+  position: absolute;
+  display: none;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
+  text-shadow: 2px 2px 5px #000;
+}
+
+@keyframes placeNameFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.tab-three__links li:hover,
+.tab-three__links li.active {
+  width: 160px;
+  height: 160px;
+}
+
+.tab-three__links li:hover .place-name,
+.tab-three__links li.active .place-name {
+  display: block;
+  will-change: transform;
+  animation: placeNameFadeIn 0.5s ease-in-out;
+}
+
+.tab-three__links img {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  padding: 5px;
+  transition: 0.5s linear;
+  filter: grayscale(100%) blur(3px);
+}
+
+.tab-three__links li:hover img,
+.tab-three__links li.active img {
+  filter: none;
+}
+
+.tab-three__content {
+  height: 750px;
+  padding-bottom: 10px;
+}
+
+.tab-three__content > div {
+  display: none;
+}
+
+.tab-three__content > div.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.tab-three__content > div.active .question-mark-circle {
+  visibility: hidden;
+  position: absolute;
+  left: 25px;
+  top: 25px;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid #555;
+  transition: opacity 0.4s;
+  opacity: 0;
+}
+
+.tab-three__content > div.active .question-mark-circle.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tab-three__content > div.active .question-mark-circle:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid #555;
+  cursor: pointer;
+}
+
+@keyframes questionMarkSwing {
+  0% {
+    transform: rotateZ(-10deg);
+  }
+  50% {
+    transform: rotateZ(10deg);
+  }
+  100% {
+    transform: rotateZ(-10deg);
+  }
+}
+
+.tab-three__content > div.active .fa-question {
+  color: #fff;
+  animation: questionMarkSwing 1s ease-in-out infinite;
+}
+
+.tab-three__content > div.active .question-mark-circle:hover .fa-question {
+  color: #f00;
+}
+
+.tab-three__content > div.active > .modal--img-top {
+  display: none;
+  box-shadow: 0 10px 15px #555;
+}
+
+@keyframes modalSlideFromLeft {
+  from {
+    opacity: 0;
+    transform: skewX(5deg) translateX(-30px);
+  }
+  to {
+    opacity: 1;
+  }
+}
+.tab-three__content > div.active > .modal--img-top.active {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 65%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  border-radius: 10px;
+  padding: 25px;
+  animation: modalSlideFromLeft 0.4s ease-in-out;
+}
+
+@keyframes placeImgFadeIn {
+  from {
+    opacity: 0.7;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.tab-three__content > div.active img {
+  box-sizing: border-box;
+  width: 750px;
+  height: 750px;
+  padding: 5px;
+  object-fit: cover;
+  border-radius: 20px;
+  animation: placeImgFadeIn 0.5s ease-in;
+  transition: filter 0.4s;
+}
+
+.tab-three__content .content__title {
+  font-size: 24px;
+  margin-bottom: 25px;
+}
+
+.tab-three__content .content__text {
+  line-height: 26px;
+  font-size: 16px;
+}
+
+.tab-three__content .content__detail-link {
+  text-transform: uppercase;
+  background-color: #0b5ed7;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: 0.4s;
+}
+
+.tab-three__content .content__detail-link:hover {
+  background-color: #0dcaf0;
+  color: #333;
+}
+
+.modal__exit {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 20px;
+  transition: font-size 0.2s;
+}
+
+.modal__exit:hover {
+  font-size: 30px;
+}
+
+.modal--make-gray {
+  filter: blur(3px) grayscale(50%);
+}
