--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 /* variables */
 @import "css/variable.css";
 
