5. Added Simple Top-Navbar with CSS Transition & JS

--- a/style.css
+++ b/style.css
@@ -10,3 +10,4 @@
 /* import css for each components */
 @import "css/components/accordion.css";
 @import "css/components/tab.css";
+@import "css/components/navbar.css";
