--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -25,3 +25,168 @@
   background-color: #04aa6d;
   color: #f2f2f2;
 }
+
+/****************** SIDE NAVBAR - LEARN US CLONE *******************/
+
+.side-navbar__container {
+  width: 600px;
+  height: 450px;
+  overflow-y: scroll;
+  margin: 50px;
+  position: relative;
+  border: 1px solid #ccc;
+  border-top: none;
+  box-shadow: 0 5px 10px #bbb;
+}
+
+.side-navbar__container .top-bar {
+  display: flex;
+  justify-content: space-between;
+  background-color: #003875;
+  padding: 25px;
+  position: sticky;
+  z-index: 1;
+  top: 0;
+}
+
+.side-navbar__container .top-bar__column {
+  display: flex;
+  align-items: center;
+}
+
+.side-navbar__container .top-bar .fa-bars {
+  color: #608ab8;
+  font-size: 28px;
+}
+
+.side-navbar__container .top-bar .fa-bars:hover {
+  cursor: pointer;
+}
+
+.side-navbar__container .top-bar__logo {
+  height: 30px;
+  margin-left: 25px;
+}
+
+.side-navbar__container .top-bar__column:last-child select,
+.side-navbar__container .top-bar__column:last-child button {
+  font-size: 13px;
+  font-weight: bold;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 3px;
+  margin-left: 5px;
+}
+
+.side-navbar__container .top-bar__lang {
+  background-color: #001a38;
+  border: none;
+}
+
+.side-navbar__container .top-bar__lang:hover {
+  cursor: pointer;
+}
+
+.side-navbar__container .top-bar__lang option {
+  background-color: #fff;
+  color: #111 !important;
+}
+
+.top-bar__sign-up,
+.top-bar__log-in {
+  background-color: #3076d6;
+  border: none;
+  padding: 0 !important;
+}
+
+.top-bar__sign-up:hover,
+.top-bar__log-in:hover {
+  background-color: #3076f6;
+}
+
+.top-bar__sign-up a,
+.top-bar__log-in a {
+  box-sizing: border-box;
+  height: 26px;
+  display: flex;
+  align-items: center;
+  padding: 5px 10px;
+}
+
+.side-navbar {
+  background-color: #2f3033;
+  width: fit-content;
+  height: calc(100% - 82.4px);
+  position: sticky;
+  z-index: 1;
+  top: 82.4px;
+  margin-left: -50px;
+  transition: 0.5s;
+}
+
+.side-navbar.active {
+  margin-left: 0;
+}
+
+.side-navbar ul {
+  width: fit-content;
+}
+
+.side-navbar ul li {
+  width: 50px;
+  height: 50px;
+  border-bottom: 1px solid #1f2023;
+}
+
+.side-navbar ul li:hover {
+  background-color: #4f5053;
+}
+
+.side-navbar ul li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.side-navbar__container .page-content {
+  /* height: 900px; */
+  position: absolute;
+  z-index: 0;
+  padding: 82.4px 38px 20px 20px;
+  top: 0;
+  transition: 0.5s;
+}
+
+.side-navbar__container .page-content.active {
+  padding-left: 88px;
+}
+
+.side-navbar__container .page-content__title {
+  font-size: 24px;
+  margin: 15px 0;
+}
+
+.side-navbar__container .page-content__text {
+  font-size: 16px;
+  line-height: 1.6em;
+  margin-bottom: 15px;
+  text-align: justify;
+}
+
+.side-navbar__container .screen-mask {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 1102px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.side-navbar__container .screen-mask.active {
+  opacity: 1;
+  z-index: 0;
+}
