7. Search Box with CSS Animation + JS

--- a/style.css
+++ b/style.css
@@ -11,3 +11,4 @@
 @import "css/components/accordion.css";
 @import "css/components/tab.css";
 @import "css/components/navbar.css";
+@import "css/components/search-menu.css";
